--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Documenting my Cybersecurity Journey"
+  subheading: "A Blueprint To My First Role"
   banner: "your awesome url"
