--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: Documenting my Cybersecurity Projects
+email: preciousanyanwu911@gmaill.com
+author: Precious Cyber6ixxx
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -40,9 +40,10 @@ author: GitHub User
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "Unpublished Work (cleft) 2017-2025 Precious Cyber6ixxx"
 
 description: >- # this means to ignore newlines until "baseurl:"
+This website documents my progress in Cybersecurity, welcome to follow along
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
